# Aletheia

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile.backend  Dockerfile.frontend  EDGE_CASES.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  api.py  api_simple.py  api_v2.py  main.py  pyproject.toml  requirements.txt  scheduler.py  verification_history.py
backend/agents/: __init__.py  ai_council.py  claim_processor.py  claim_triage.py  claim_triage_fast.py  devils_advocate.py  domain_registry.py  fact_checker.py  forensic_expert.py  judge.py  llm_provider.py  multi_model.py  question_answerer.py
backend/dow/: __init__.py  anti_sybil.py  database.py  manager.py  manager_v2.py  models.py
backend/market/: __init__.py  manager.py  models.py
backend/storage/: dow.db  verification_history.db
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/dow/: page.tsx
frontend/components/: ActiveChallengesList.tsx  ChallengeForm.tsx  DemoModeBanner.tsx  Navbar.tsx  Providers.tsx  SearchHero.tsx  SolanaWalletProvider.tsx  Squares.tsx  Toast.tsx  TreasuryDashboard.tsx  VerificationResult.tsx  VotingPanel.tsx  WalletConnectButton.tsx
