[project]
name = "aletheia"
version = "1.0.0"
description = "AI-Powered Fact-Checking System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "rich>=14.2.0",
    "tavily-python>=0.5.0",
    "uvicorn>=0.38.0",
]
